src/app/features/user-profile/user-profile.component.scss
.container {
  padding: 1rem;
  width: fit-content;
  margin: auto;
  margin-top: 2rem;
  h2 {
    margin-bottom: 2rem;
  }
}

// ::ng-deep .mat-tab-label-active {
//   background-color: red;
// }

::ng-deep .mat-tab-link {
  font-family: inherit;
  color: inherit;
  font-weight: bold;
}

.tab-icon {
  margin-left: 1rem;
}

